--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "portmanager",
+  "name": "portkeeper",
   "version": "1.0.0",
-  "description": "A comprehensive port management tool for developers",
-  "main": "dist/electron/main/index.js",
+  "description": "A comprehensive port management tool for developers with CLI and GUI interfaces",
+  "main": "dist/cli/index.js",
   "type": "module",
   "bin": {
     "portman": "./dist/cli/index.js"
   },
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "dev": "npm run dev:cli",
     "dev:cli": "tsx watch src/cli/index.ts",
@@ -14,6 +19,9 @@
     "dev:electron": "electron-vite dev",
     "start": "electron .",
     "build": "npm run build:cli && npm run build:gui",
+    "build:npm": "npm run build:cli",
+    "prepublishOnly": "npm run build:npm",
+    "postinstall": "npm run fix:node",
     "fix:electron": "npm rebuild better-sqlite3 --runtime=electron --target=28.0.0 --dist-url=https://electronjs.org/headers --abi=119",
     "fix:node": "npm rebuild better-sqlite3",
     "build:cli": "tsc -p tsconfig.cli.json",
@@ -32,22 +40,28 @@
   },
   "keywords": [
     "port",
-    "management",
+    "port-management",
+    "port-manager",
     "developer-tools",
     "cli",
     "gui",
-    "productivity"
+    "productivity",
+    "development",
+    "localhost",
+    "port-reservation",
+    "port-scanner",
+    "devops"
   ],
   "author": "Ahmad Zein",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ahmadzein/portmanager.git"
+    "url": "git+https://github.com/ahmadzein/portkeeper.git"
   },
   "bugs": {
-    "url": "https://github.com/ahmadzein/portmanager/issues"
+    "url": "https://github.com/ahmadzein/portkeeper/issues"
   },
-  "homepage": "https://github.com/ahmadzein/portmanager#readme",
+  "homepage": "https://portkeeper.net",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.8",
